// Vitest Snapshot v1

exports[`Testing Suite for Input Component > Input Component in Email Mode > should render the component 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 16rem;
  padding: 0.5rem;
  margin: 0px 10px;
  border: 1px solid #BBBBBB;
  border-radius: 0.5rem;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.07rem;
  -moz-letter-spacing: 0.07rem;
  -ms-letter-spacing: 0.07rem;
  letter-spacing: 0.07rem;
  border: none;
}

.c3:focus {
  outline: none;
}

.c1 {
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  font-size: 1rem;
  color: #1E1E1E;
  font-weight: 400;
  margin-bottom: 0.5rem;
  padding-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="email"
    >
      Password
    </label>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder=""
        type="email"
      />
    </div>
  </div>
</div>
`;

exports[`Testing Suite for Input Component > Input Component in Password Mode > should render the component 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 16rem;
  padding: 0.5rem;
  margin: 0px 10px;
  border: 1px solid #BBBBBB;
  border-radius: 0.5rem;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.07rem;
  -moz-letter-spacing: 0.07rem;
  -ms-letter-spacing: 0.07rem;
  letter-spacing: 0.07rem;
  border: none;
}

.c3:focus {
  outline: none;
}

.c1 {
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  font-size: 1rem;
  color: #1E1E1E;
  font-weight: 400;
  margin-bottom: 0.5rem;
  padding-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="password"
    >
      Password
    </label>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder=""
        type="password"
      />
      <img
        alt="olhozinho"
        data-nimg="1"
        decoding="async"
        height="20"
        loading="lazy"
        src="/icons/eye_light.svg"
        srcset="/icons/eye_light.svg 1x, /icons/eye_light.svg 2x"
        style="color: transparent;"
        width="20"
      />
    </div>
  </div>
</div>
`;

exports[`Testing Suite for Input Component > Input Component in Text Mode > should render the component 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 16rem;
  padding: 0.5rem;
  margin: 0px 10px;
  border: 1px solid #BBBBBB;
  border-radius: 0.5rem;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  -webkit-letter-spacing: 0.07rem;
  -moz-letter-spacing: 0.07rem;
  -ms-letter-spacing: 0.07rem;
  letter-spacing: 0.07rem;
  border: none;
}

.c3:focus {
  outline: none;
}

.c1 {
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  font-size: 1rem;
  color: #1E1E1E;
  font-weight: 400;
  margin-bottom: 0.5rem;
  padding-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="text"
    >
      Password
    </label>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder=""
        type="text"
      />
    </div>
  </div>
</div>
`;
